Fixed gap project_cards section

--- a/css/styles.css
+++ b/css/styles.css
@@ -211,9 +211,10 @@ body {
 .project__cards {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: center;
 	padding: 100px 0 70px;
 	color: white;
+	gap: 40px;
 }
 
 .project__card {
